Error de gramatica en el h1

--- a/jAlpines/index.html
+++ b/jAlpines/index.html
@@ -6,7 +6,7 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <title>Proyecto Base</title>
-<link rel="stylesheet" href="../assets/css/styles.css?3805541">
+<link rel="stylesheet" href="../assets/css/styles.css?5484838">
 <script type="text/javascript" src="../assets/js/jquery.js" ></script>
 <script type="text/javascript" src="../assets/js/slides.js" defer></script>
 <script type="text/javascript" src="../assets/js/plugins.js" defer></script>
@@ -74,7 +74,7 @@
 <div class="container">
 <div class="wrap">
 <div class="fix-6-12">
-<h1 class="smaller margin-bottom-2  done">La Peliculas más Populares del Momento</h1>
+<h1 class="smaller margin-bottom-2  done">Las Películas más Populares del Momento</h1>
 <h6 class="large done"><span class="opacity-8 "></span>Alpines Js</h6>
 </div>
 <div class="fix-12-12 margin-top-4 center">
